# synapse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  lefthook.yml
.github/: CODEOWNERS
.github/workflows/: ci.yml  evals.yml
backend/: openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f956ea0001f_create_initial_schema.py  7b2ef9c8bcca_add_sub_questions_override_to_research_.py
backend/app/: config.py  logging.py  main.py
backend/app/agents/: critic.py  depth.py  orchestrator.py  scout.py  scout_graph.py  scribe.py
backend/app/api/: routes.py  ws.py
backend/app/auth/: __init__.py  dependencies.py  manager.py  models.py  routes.py  schemas.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: ratelimit.py
backend/app/models/: events.py  orm.py  research.py
backend/app/scripts/: dump_openapi.py
backend/app/services/: credibility.py  events.py  export.py  llm.py  persistence.py  search.py
backend/app/tasks/: research.py
backend/tests/: conftest.py
backend/tests/evals/: README.md  _harness.py  _loaders.py  _reporting.py  conftest.py  test_critic_eval.py  test_scout_eval.py  test_scribe_eval.py
backend/tests/evals/data/: critic_cases.json  scout_topics.json  scribe_cases.json
backend/tests/evals/results/: .gitignore
backend/tests/integration/: conftest.py  test_auth.py  test_delete_job.py  test_lineage.py  test_migrations.py  test_orm.py  test_research_list.py
backend/tests/unit/: test_credibility.py  test_depth.py  test_export.py  test_orchestrator.py  test_persistence.py  test_research_endpoint.py  test_research_pipeline_task.py  test_scout.py  test_scribe.py  test_search_client.py  test_ws_jobs.py
docs/: AI_TOOLS.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx  router.test.ts  router.tsx
frontend/src/components/: AppNavbar.tsx  ConfidenceBar.test.tsx  ConfidenceBar.tsx  MarginPanel.tsx  PhaseRail.tsx  PhaseShell.tsx  Pill.test.tsx  Pill.tsx  ReportRenderer.tsx  ReportSection.tsx  ReportView.tsx  SourcePill.tsx  SourceRow.test.tsx  SourceRow.tsx
frontend/src/constants/: models.ts
frontend/src/hooks/: useAgentModels.test.ts  (+16 more)
scripts/: project.sh
(+52 files in other folders)
