[project]
name = "synapse-backend"
version = "0.1.0"
description = "Synapse research platform backend (Scout, Scribe, Critic agents)."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "exa-py>=2.12.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "lxml[html-clean]>=6.1.0",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.2",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "taskiq>=0.12.3",
    "taskiq-fastapi>=0.5.0",
    "taskiq-redis>=1.2.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "polyfactory>=3.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "agent_eval: LLM-as-judge evals (slow, requires API keys, run on demand)",
    "integration: tests that require a live Postgres instance",
]
addopts = "-ra --strict-markers -m 'not agent_eval and not integration'"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# B008: FastAPI's dependency injection pattern uses Depends() in default
# arguments by design; flagging it as a "function call in default" is a
# false positive for this framework.
ignore = [
    "B008",
    # E501 is suppressed so long comments can wrap at natural sentence boundaries rather than a fixed column. See AGENTS.md.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Migration files are auto-generated; FK/index names make E501 unavoidable,
# and the trailing-whitespace on the empty "Revises:" line is Alembic's template.
"alembic/versions/*.py" = ["E501", "W291"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
